syntax = "proto3";

package kgis.datalake.product;

option java_package = "kgis.datalake.product.protobuf";
option java_outer_classname = "ProductRepositoryProto";
option java_multiple_files = true;

service ProductRepository {

    // Gets product information.
    rpc GetProductInfo (ProductInfoRequest) returns (ProductInfoResponse) {}
}

message ProductInfoRequest {
    string productId = 1;
}

message ProductInfoResponse {
    string productId = 1;
    string shortName = 2;
    string longName = 3;
    string description = 4;
    bool active = 5;
    repeated SkuInfo skus = 6;

	bytes json = 911;
}

message SkuInfo {
    string sku = 1;
    bool active = 2;
    string size = 3;
    PriceInfo prices = 4;
        
	bytes json = 911;
}

message PriceInfo {
    double list = 1;
    double msrp = 2;
    double sale = 3;
    string formattedList = 4;
    string formattedMsrp = 5;
    string formattedSale = 6;
        
	bytes json = 911;
}
